plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.88'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id


base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation("com.teamabnormals:blueprint:${minecraft_version}-${project.blueprint}")

    implementation("com.teamabnormals:boatload:${minecraft_version}-${project.boatload}")
    implementation("com.teamabnormals:woodworks:${minecraft_version}-${project.woodworks}")
    implementation("com.teamabnormals:gallery:${minecraft_version}-${project.gallery}")

    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${project.jei}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${project.jei}")

    compileOnly("curse.maven:jade-324717:${project.jade}")
    runtimeOnly("curse.maven:jade-324717:${project.jade}")

    implementation("curse.maven:clayworks-592162:${project.clayworks}")
    implementation("curse.maven:caverns-and-chasms-438005:${project.cnc}")

    implementation("curse.maven:another-furniture-610492:7355747")
}

repositories {
    maven { url = "https://maven.teamabnormals.com/" }
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://modmaven.dev" }
    maven { url = "https://www.cursemaven.com" }
}


tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            blueprint              : blueprint
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}